argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ekomart
  labels:
    name: ekomart
    managed-by: argocd
